# libgit2-memory

./: CMakeLists.txt
src/example/: main.c
src/memory/: khash.h  memory-odb.c  memory-odb.h
